package org.example.math;

@FunctionalInterface
public interface MathFunction {
    double value(double x);
}
